8323781: [lworld] Synchronization on inline type does not throw IllegalMonitorStateException with lightweight locking

Reviewed-by: thartmann